# art-keeper

./: README.md  go.mod  go.sum  main.go  pyproject.toml
.zed/: debug.json
art_keeper/: checksums.py  cmd.py  config.py  git.py  git_mirror.py  github.py  main.py  mover.py  s3.py  s3client.py  utils.py
art_keeper/entities/: arch.py  extension.py  platform.py
art_keeper/filters/: arch_filter.py  extension_filter.py  filter.py  filter_sequence.py  platform_filter.py  regex_filter.py
art_keeper/git_platforms/: forgejo.py  git_platform.py  gitlab.py
art_move/: arch.go  arch_filter.go  art_move.go  filter.go  filter_sequence.go  platform.go  platform_filter.go
checksums/: checksums.go
config/: config.go
github/: github.go
s3/: s3.go
utils/: utils.go
