[project]
name = "art-keeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "pyserde==0.25.1",
    "aiohttp==3.13.2",
    "aiofiles==25.1.0",
    "aiobotocore==2.25.2",
]

[tool]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
  "types-aiobotocore[essential]==2.25.2",
]
